# frontend-sdl2

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: FindPoco.cmake  FindSDL2.cmake  FindprojectM4.cmake  SDL2Target.cmake
libs/projectM4/include/projectM-4/: version.h
src/: CMakeLists.txt  Info.plist  ProjectMWrapper.cpp  ProjectMWrapper.h  RenderLoop.cpp  SDLRenderingWindow.cpp
